# dz_youtube_analytics_project

./: .env_example  pyproject.toml  requirement.txt
helper/: youtube_api_manual.py
homework-2/: moscowpython.json
homework-4/: main.py
src/: channel.py  playlist.py  video.py
