[tool.poetry]
name = "dz-youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Sergey_Shershikov <ssher250110@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
google-api-python-client = "^2.111.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
